[#32175] Better error handling of invalid input [KLO, 110612]
git-svn-id: https://ncisvn.nci.nih.gov/svn/ncit/trunk@2970 0604bb77-1110-461e-859e-28c50bf9b280