@@ -28,7 +28,7 @@ package org.json;
  * A JSONTokener takes a source string and extracts characters and tokens from
  * it. It is used by the JSONObject and JSONArray constructors to parse JSON
  * source strings.
- * 
+ *
  * @author JSON.org
  * @version 2
  */
@@ -46,7 +46,7 @@ public class JSONTokener {
 
     /**
      * Construct a JSONTokener from a string.
-     * 
+     *
      * @param s A source string.
      */
     public JSONTokener(String s) {
@@ -67,7 +67,7 @@ public class JSONTokener {
 
     /**
      * Get the hex value of a character (base16).
-     * 
+     *
      * @param c A character between '0' and '9' or between 'A' and 'F' or
      *        between 'a' and 'f'.
      * @return An int between 0 and 15, or -1 if c was not a hex digit.
@@ -88,7 +88,7 @@ public class JSONTokener {
     /**
      * Determine if the source string still contains characters that next() can
      * consume.
-     * 
+     *
      * @return true if not yet at the end of the source.
      */
     public boolean more() {
@@ -97,7 +97,7 @@ public class JSONTokener {
 
     /**
      * Get the next character in the source string.
-     * 
+     *
      * @return The next character, or 0 if past the end of the source string.
      */
     public char next() {
@@ -112,7 +112,7 @@ public class JSONTokener {
     /**
      * Consume the next character, and check that it matches a specified
      * character.
-     * 
+     *
      * @param c The character to match.
      * @return The character.
      * @throws JSONException if the character does not match.
@@ -128,7 +128,7 @@ public class JSONTokener {
 
     /**
      * Get the next n characters.
-     * 
+     *
      * @param n The number of characters to take.
      * @return A string of n characters.
      * @throws JSONException Substring bounds error if there are not n
@@ -147,7 +147,7 @@ public class JSONTokener {
     /**
      * Get the next char in the string, skipping whitespace and comments
      * (slashslash, slashstar, and hash).
-     * 
+     *
      * @throws JSONException
      * @return A character, or 0 if there are no more characters.
      */
@@ -193,7 +193,7 @@ public class JSONTokener {
      * Return the characters up to the next close quote character. Backslash
      * processing is done. The formal JSON format does not allow strings in
      * single quotes, but an implementation is allowed to accept them.
-     * 
+     *
      * @param quote The quoting character, either <code>"</code>&nbsp;<small>(double
      *        quote)</small> or <code>'</code>&nbsp;<small>(single quote)</small>.
      * @return A String.
@@ -249,7 +249,7 @@ public class JSONTokener {
     /**
      * Get the text up but not including the specified character or the end of
      * line, whichever comes first.
-     * 
+     *
      * @param d A delimiter character.
      * @return A string.
      */
@@ -270,7 +270,7 @@ public class JSONTokener {
     /**
      * Get the text up but not including one of the specified delimeter
      * characters or the end of line, whichever comes first.
-     * 
+     *
      * @param delimiters A set of delimiter characters.
      * @return A string, trimmed.
      */
@@ -292,9 +292,9 @@ public class JSONTokener {
     /**
      * Get the next value. The value can be a Boolean, Double, Integer,
      * JSONArray, JSONObject, Long, or String, or the JSONObject.NULL object.
-     * 
+     *
      * @throws JSONException If syntax error.
-     * 
+     *
      * @return An object.
      */
     public Object nextValue() throws JSONException {
@@ -317,7 +317,7 @@ public class JSONTokener {
          * Handle unquoted text. This could be the values true, false, or null,
          * or it can be a number. An implementation (such as this one) is
          * allowed to also accept non-standard forms.
-         * 
+         *
          * Accumulate characters until we reach the end of the text or a
          * formatting character.
          */
@@ -361,15 +361,19 @@ public class JSONTokener {
                 if (s.length() > 2
                     && (s.charAt(1) == 'x' || s.charAt(1) == 'X')) {
                     try {
-                        return new Integer(Integer.parseInt(s.substring(2), 16));
+                        //return new Integer(Integer.parseInt(s.substring(2), 16));
+                        return Integer.valueOf(Integer.parseInt(s.substring(2), 16));
                     } catch (Exception e) {
                         /* Ignore the error */
+                        e.printStackTrace();
                     }
                 } else {
                     try {
-                        return new Integer(Integer.parseInt(s, 8));
+                        //return new Integer(Integer.parseInt(s, 8));
+                        return Integer.valueOf(Integer.parseInt(s, 8));
                     } catch (Exception e) {
                         /* Ignore the error */
+                        e.printStackTrace();
                     }
                 }
             }
@@ -393,7 +397,7 @@ public class JSONTokener {
     /**
      * Skip characters until the next character is the requested character. If
      * the requested character is not found, no characters are skipped.
-     * 
+     *
      * @param to A character to skip to.
      * @return The requested character, or zero if the requested character is
      *         not found.
@@ -415,7 +419,7 @@ public class JSONTokener {
     /**
      * Skip characters until past the requested string. If it is not found, we
      * are left at the end of the source.
-     * 
+     *
      * @param to A string to skip past.
      */
     public void skipPast(String to) {
@@ -429,7 +433,7 @@ public class JSONTokener {
 
     /**
      * Make a JSONException to signal a syntax error.
-     * 
+     *
      * @param message The error message.
      * @return A JSONException object, suitable for throwing
      */
@@ -439,7 +443,7 @@ public class JSONTokener {
 
     /**
      * Make a printable string of this JSONTokener.
-     * 
+     *
      * @return " at character [this.myIndex] of [this.mySource]"
      */
     public String toString() {
